--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
